--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "defender-game",
-  "version": "1.0.0",
-  "description": "\"Browser based game\"",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Mistinget/NPMproject.git"
-  },
-  "keywords": [
-    "game"
-  ],
-  "author": "Anna_Boytsova",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Mistinget/NPMproject/issues"
-  },
-  "homepage": "https://github.com/Mistinget/NPMproject#readme"
+    "name": "defender-game",
+    "version": "1.0.0",
+    "description": "\"Browser based game\"",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "babel src -d dist"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Mistinget/NPMproject.git"
+    },
+    "keywords": [
+        "game"
+    ],
+    "author": "Anna_Boytsova",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Mistinget/NPMproject/issues"
+    },
+    "homepage": "https://github.com/Mistinget/NPMproject#readme",
+    "devDependencies": {
+        "@babel/cli": "^7.15.4",
+        "@babel/core": "^7.15.5",
+        "@babel/preset-env": "^7.15.4"
+    },
+    "dependencies": {
+        "core-js": "^3.17.3"
+    }
 }
