--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
             "error",
             "LabeledStatement",
             "WithStatement"
-        ]
+        ],
+        "no-unused-vars": "warn",
+        "no-multiple-empty-lines": "warn"
     }
 }
